--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <img src="https://avatars3.githubusercontent.com/u/13931071?v=4">
     
     <ul>
-      <li>Minimalist Baker</li>
-      <li>Plan to Eat</li>
-      <li>The Freckled Pantry</li>
+      <li><a href="www.minimalistbaker.com">Minimalist Baker</a></li>
+      <li><a href="www.plantoeat.com">Plan to Eat</a></li>
+      <li><a href="www.thefreckledpantry.com">The Freckled Pantry</a></li>
     </ul>
       
   </body>
